[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = ["Jack Michaud <jack@lomz.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.10.0"
ipykernel = "^6.6.0"
jupyterlab = "^3.2.4"
numpy = "^1.21.4"
torchvision = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
